--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,14 @@ pencode.generator.records=100000
 pencode.generator.words=5
 pencode.batch.size=10
 
+# JDBC configuration.
 pencode.datasource.jdbc-url=jdbc:postgresql://localhost:5432/pencode
 pencode.datasource.username=root
 pencode.datasource.password=secretdb
 pencode.datasource.pool-size=20
 pencode.datasource.driver-class-name=org.postgresql.Driver
 pencode.datasource.hikari.data-source-properties.reWriteBatchedInserts=true
+
+# Kafka configuration.
+pencode.kafka.bootstrap=localhost:9090
+pencode.kafka.topic.name=to-encode
