--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
+pencode.generator.keys=100
 pencode.generator.records=100000
 pencode.generator.words=5
-pencode.batch.size=10
+
+pencode.consumer.batch.size=2500
+pencode.consumer.threads=2
+
+# DB performance configuration.
+pencode.db.insert.batch=100
+
 
 # JDBC configuration.
 pencode.datasource.jdbc-url=jdbc:postgresql://localhost:5432/pencode
