--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ pencode.generator.keys=100
 pencode.generator.records=100000
 pencode.generator.words=5
 
+# Consumer configuration (in charge of signing the records).
 pencode.consumer.batch.size=2500
-pencode.consumer.threads=2
+pencode.consumer.threads=4
+pencode.consumer.poll.duration=10000
 
 # DB performance configuration.
 pencode.db.insert.batch=100
