--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,15 +41,7 @@ jobs:
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
-    - name: Generate JaCoCo Badge
-      #      if: ${{ github.ref == 'refs/heads/master' }}
-      uses: cicirello/jacoco-badge-generator@v2
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
       with:
-        jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
-        badges-directory: build/reports/jacoco/test/html/badges
-
-    - name: Publish coverage report to GitHub Pages
-      #      if: ${{ github.ref == 'refs/heads/master' }}
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        folder: build/reports/jacoco/test/html
+        token: ${{ secrets.CODECOV_TOKEN }}
