--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <version>${version.spring.boot}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.mockito</groupId>-->
+<!--            <artifactId>mockito-core</artifactId>-->
+<!--            <version>5.17.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
